--- a/src/css/xanakena.css
+++ b/src/css/xanakena.css
@@ -397,7 +397,7 @@ form {
 .flex{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 /* Misc
